updated UI, parameterized detection pipeline